WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23392
Some pixel test output includes DumpRenderTree warnings about changing main display profile
https://bugs.webkit.org/show_bug.cgi?id=23392
Summary
Some pixel test output includes DumpRenderTree warnings about changing main d...
David Kilzer (:ddkilzer)
Reported
2009-01-16 14:55:37 PST
* SUMMARY Some pixel tests (the first test each time DumpRenderTree is restarted) contain bogus STDERR output about changing the main display profile. This shouldn't be included in the test output. * STEPS TO REPRODUCE $ ./WebKitTools/Scripts/run-webkit-tests --pixel --singly * RESULTS Every test will have STDERR output because a new DumpRenderTree process is created for each test via the "--singly" flag. This should be printed to the console instead. * REGRESSION This probably started when STDERR output begin to be captured for all tests. This warning used to get printed to the console. * NOTES The warning message: WARNING: Temporarily changing the main display color profile to "/System/Library/ColorSync/Profiles/Generic RGB Profile.icc": the colors on your screen will change for the duration of the testing. This allows the WebKit pixel-based regression tests to have consistent color values across all machines.
Attachments
Patch v1
(2.31 KB, patch)
2009-01-20 15:38 PST
,
Pierre-Olivier Latour
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2009-01-16 14:56:35 PST
One solution would be to prefix all DumpRenderTree output with a unique string (like "DRT: ") so that run-webkit-tests knows that it should print those lines out to the console (instead of including them as part of the test output).
Pierre-Olivier Latour
Comment 2
2009-01-20 08:32:47 PST
Why don't we just remove this warning? I left it in place when I re-implement the pixel test path of DRT, but never though it had any added value.
mitz
Comment 3
2009-01-20 08:40:15 PST
(In reply to
comment #1
)
> One solution would be to prefix all DumpRenderTree output with a unique string > (like "DRT: ") so that run-webkit-tests knows that it should print those lines > out to the console (instead of including them as part of the test output).
I think a simpler solution would be for the script, instead of DRT, to output this message. But I am fine with removing it altogether.
David Kilzer (:ddkilzer)
Comment 4
2009-01-20 10:14:26 PST
(In reply to
comment #3
)
> I think a simpler solution would be for the script, instead of DRT, to output > this message. But I am fine with removing it altogether.
Ditto.
Pierre-Olivier Latour
Comment 5
2009-01-20 15:38:33 PST
Created
attachment 26875
[details]
Patch v1
Darin Adler
Comment 6
2009-01-20 16:07:36 PST
Comment on
attachment 26875
[details]
Patch v1 Seems OK, r=me
Pierre-Olivier Latour
Comment 7
2009-01-20 16:30:51 PST
Sending WebKitTools/ChangeLog Sending WebKitTools/DumpRenderTree/mac/PixelDumpSupportMac.mm Sending WebKitTools/Scripts/run-webkit-tests Transmitting file data ... Committed revision 40075.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug