2009-01-20  Pierre-Olivier Latour  <pol@apple.com>

Reviewed by Darin Adler.

        Print warning regarding display color profile change in run-webkit-tests instead of DRT.

        https://bugs.webkit.org/show_bug.cgi?id=23392

        * DumpRenderTree/mac/PixelDumpSupportMac.mm:
        (setupMainDisplayColorProfile):
        * Scripts/run-webkit-tests:



Canonical link: https://commits.webkit.org/32271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40075 268f45cc-cd09-0410-ab3c-d52691b4dbfc